<resources>
    <string name="app_name">                GPSPrototype</string>
    <string name="edit_username">           Username</string>
    <string name="edit_password">           Password</string>
    <string name="edit_password_current">   Current Password</string>
    <string name="edit_password_new">       New Password</string>
    <string name="edit_email">              E-mail</string>
    <string name="button_send">             Send</string>
    <string name="button_login">            Log In</string>
    <string name="button_delete">           Delete Marker</string>
    <string name="button_createAcc">        Create Account</string>
    <!--Category String-->
    <string name="cat_memorial">            Memorial</string>
    <string name="cat_statue">              Statue</string>
    <string name="cat_building">            Building</string>
    <string name="cat_park">                Park</string>
    <string name="cat_play_area">           Play Area</string>
    <string name="cat_street_art">          Street Art</string>
    <string name="cat_toilet">              Toilet</string>
    <string name="cat_bin">                 Bin</string>
    <string name="cat_misc">                Misc</string>

    <string name="dark_mode">               Dark Mode</string>
    <string name="labels">                  Labels</string>

    <string name="title_activity_maps">     Map</string>

    <string name="menu_filter">             Filter</string>
    <string name="menu_account">            Account</string>
    <string name="menu_settings">           Settings</string>
    <string name="menu_normal_map">         Normal</string>
    <string name="menu_hybrid_map">         Hybrid</string>
    <string name="menu_satellite_map">      Satellite</string>
    <string name="menu_terrain_map">        Terrain</string>

    <string name="search">                  Search</string>
    <string name="button_addMarker">        Add Marker</string>
    <string name="marker_title">            Title</string>
    <string name="marker_category">         Category</string>
    <string name="marker_description">      Description</string>
    <string name="marker_placedBy">         Placed By</string>
    <string name="resetPassword">           Forgot Password?
                        \n Enter email above and click here.</string>
    <string name="changePasswordLabel">     To change password, enter new password
                        \n  in above field and click change password.</string>
    <string name="changePasswordButton">    Change Password</string>

    <!-- Category Spinner values -->
    <string-array name="category_array">
        <item>Memorial</item>
        <item>Statue</item>
        <item>Building</item>
        <item>Park</item>
        <item>Play Area</item>
        <item>Street Art</item>
        <item>Toilet</item>
        <item>Bin</item>
        <item>Misc</item>
    </string-array>


    <!-- Firestore Strings -->
    <string name="collection_locations">    Location</string>
    <string name="collection_users">        User</string>

</resources>
