<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group >
        <item
            android:id="@+id/menu_filter"
            android:title="@string/menu_filter"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_account"
            android:title="@string/menu_account"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_normal_map"
            android:title="@string/menu_normal_map"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_hybrid_map"
            android:title="@string/menu_hybrid_map"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_satellite_map"
            android:title="@string/menu_satellite_map"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_terrain_map"
            android:title="@string/menu_terrain_map"
            app:showAsAction="never" />
    </group>
</menu>